Change back to Collectors.toList since jdk 11 do not support Stream.toList.
Test: no
Change-Id: I1ad399c743733c06b1393ac746927cb820ee00d5